# quant_trade

./: .clang-format  .gitignore  CMakeLists.txt  Exchange.cpp  Exchange.h  Feed.cpp  Feed.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  OrderManager.cpp  OrderManager.h  Tick.cpp  Tick.h  csv_reader.cpp  csv_reader.h  main.cpp
test/: test_csv_reader.cpp  test_exchange.cpp  test_feed.cpp  test_order_book.cpp  test_order_manager.cpp  test_smoke.cpp
